--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -34,3 +34,21 @@
 	pages = {204--216},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\TGINT9NI\\Abbas 等 - 2021 - Characterizing and classifying urban tree species .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\XP4QHLYU\\S0924271621001283.html:text/html},
 }
+
+@article{deng_pcabased_2008,
+	title = {{PCA}‐based land‐use change detection and analysis using multitemporal and multisensor satellite data},
+	volume = {29},
+	issn = {0143-1161},
+	url = {https://doi.org/10.1080/01431160801950162},
+	doi = {10.1080/01431160801950162},
+	abstract = {Remote‐sensing change detection based on multitemporal, multispectral, and multisensor imagery has been developed over several decades and provided timely and comprehensive information for planning and decision‐making. In practice, however, it is still difficult to select a suitable change‐detection method, especially in urban areas, because of the impacts of complex factors. This paper presents a new method using multitemporal and multisensor data (SPOT‐5 and Landsat data) to detect land‐use changes in an urban environment based on principal‐component analysis (PCA) and hybrid classification methods. After geometric correction and radiometric normalization, PCA was used to enhance the change information from stacked multisensor data. Then, a hybrid classifier combining unsupervised and supervised classification was performed to identify and quantify land‐use changes. Finally, stratified random and user‐defined plots sampling methods were synthetically used to obtain total 966 reference points for accuracy assessment. Although errors and confusion exist, this method shows satisfying results with an overall accuracy to be 89.54\% and 0.88 for the kappa coefficient. When compared with the post‐classification method, PCA‐based change detection also showed a better accuracy in terms of overall, producer's, and user's accuracy and kappa index. The results suggested that significant land‐use changes have occurred in Hangzhou City from 2000 to 2003, which may be related to rapid economy development and urban expansion. It is further indicated that most changes occurred in cropland areas due to urban encroachment.},
+	number = {16},
+	urldate = {2023-03-22},
+	journal = {International Journal of Remote Sensing},
+	author = {Deng, J. S. and Wang, K. and Deng, Y. H. and Qi, G. J.},
+	month = aug,
+	year = {2008},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/01431160801950162},
+	pages = {4823--4838},
+}
