--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -52,3 +52,19 @@
 \_eprint: https://doi.org/10.1080/01431160801950162},
 	pages = {4823--4838},
 }
+
+@article{hansen_high-resolution_2013,
+	title = {High-{Resolution} {Global} {Maps} of 21st-{Century} {Forest} {Cover} {Change}},
+	volume = {342},
+	url = {https://www.science.org/doi/10.1126/science.1244693},
+	doi = {10.1126/science.1244693},
+	abstract = {Quantification of global forest change has been lacking despite the recognized importance of forest ecosystem services. In this study, Earth observation satellite data were used to map global forest loss (2.3 million square kilometers) and gain (0.8 million square kilometers) from 2000 to 2012 at a spatial resolution of 30 meters. The tropics were the only climate domain to exhibit a trend, with forest loss increasing by 2101 square kilometers per year. Brazil’s well-documented reduction in deforestation was offset by increasing forest loss in Indonesia, Malaysia, Paraguay, Bolivia, Zambia, Angola, and elsewhere. Intensive forestry practiced within subtropical forests resulted in the highest rates of forest change globally. Boreal forest loss due largely to fire and forestry was second to that in the tropics in absolute and proportional terms. These results depict a globally consistent and locally relevant record of forest change.},
+	number = {6160},
+	urldate = {2023-03-22},
+	journal = {Science},
+	author = {Hansen, M. C. and Potapov, P. V. and Moore, R. and Hancher, M. and Turubanova, S. A. and Tyukavina, A. and Thau, D. and Stehman, S. V. and Goetz, S. J. and Loveland, T. R. and Kommareddy, A. and Egorov, A. and Chini, L. and Justice, C. O. and Townshend, J. R. G.},
+	month = nov,
+	year = {2013},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {850--853},
+}
